# pokemon-plus-pi

./: .gitignore  Cargo.toml  README.md  build.rs  xcompile.ps1
.cargo/: config
deb-deps/: post-install.sh
src/: aes.rs  challenge.rs  lib.rs  main.rs  secrets.rs
